--- a/src/assets/sass/blocks/buttons.scss
+++ b/src/assets/sass/blocks/buttons.scss
@@ -36,6 +36,10 @@
 		}
 		&:disabled, &.disabled{
 			opacity: .5;
+			cursor: default;
+			&:hover{
+				background: #000000;
+			}
 		}
 	}
 
@@ -48,6 +52,30 @@
 		}
 		&:disabled, &.disabled{
 			opacity: .5;
+			cursor: default;
+			&:hover{
+				background: #F4F4F4;
+				color: rgba(0, 0, 0, 0.75);
+			}
+		}
+	}
+
+	&--red{
+		background: rgba(249, 154, 154, 0.3);
+		border-radius: 8px;
+		height: 39px;
+		color: #E11818;
+		&:hover{
+			background: rgba(249, 154, 154, 0.5);
+			color: #E11818;
+		}
+		&:disabled, &.disabled{
+			opacity: .5;
+			cursor: default;
+			&:hover{
+				background: rgba(249, 154, 154, 0.3);
+				color: #E11818;
+			}
 		}
 	}
 
@@ -65,6 +93,25 @@
 		height: 39px;
 		svg{
 			display: none;
+		}
+	}
+
+	&--wh{
+		width: 46px;
+		height: 46px;
+		border-radius: 12px;
+		padding: 0;
+		background: #F4F4F4;
+		border: 1px solid rgba(116, 116, 116, 0);
+		svg{
+			stroke: #000;
+			fill: none;
+			width: 24px;
+			height: 24px;
+		}
+		&:hover{
+			background: #F4F4F4;
+			border: 1px solid rgba(116, 116, 116, 0.25);		
 		}
 	}
 
