--- a/src/tpl/partials/popups_mark.html
+++ b/src/tpl/partials/popups_mark.html
@@ -19,10 +19,10 @@
 
                 <div class="popup__form-g">
                     <label class="popup__form-l">Цвет</label>
-                    
+                    <form>
                     <div class="color-box">
                         <label class="color-box__label">
-                            <input type="radio" name="color_box" class="color-box__inp">
+                            <input type="radio" name="color_box" checked class="color-box__inp">
                             <span class="color-box__frame bg-ADACF1"></span>
                         </label>
                         <label class="color-box__label">
@@ -126,6 +126,7 @@
                             <span class="color-box__frame bg-5263FF"></span>
                         </label>
                     </div>
+                    </form>
                 </div>
 
                 <div class="popup__form-btns">
@@ -159,9 +160,10 @@
                 <div class="popup__form-g">
                     <label class="popup__form-l">Цвет</label>
                     
+                    <form>
                     <div class="color-box">
                         <label class="color-box__label">
-                            <input type="radio" name="color_box" class="color-box__inp">
+                            <input type="radio" name="color_box" class="color-box__inp" checked>
                             <span class="color-box__frame bg-ADACF1"></span>
                         </label>
                         <label class="color-box__label">
@@ -265,6 +267,7 @@
                             <span class="color-box__frame bg-5263FF"></span>
                         </label>
                     </div>
+                    </form>
                 </div>
 
                 <div class="popup__form-lbt">
