--- a/src/assets/sass/blocks/noty.scss
+++ b/src/assets/sass/blocks/noty.scss
@@ -459,3 +459,27 @@ $corner-space: 20px;
 		}
   }  
 }
+
+.noty_theme__mint{
+  background: #FFFFFF;
+  box-shadow: 0px 14px 47px rgba(108, 108, 108, 0.18);
+  border-radius: 15px;
+  padding: 30px;
+  .noty_body{
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 28px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.85);
+    text-align: center;
+  }
+  .noty_buttons{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    .btn{
+      flex: 0 0 calc(50% - 5px);
+      max-width: calc(50% - 5px);
+    }
+  }
+}
